# fitness-app

./: .env.example  .gitignore  CODEX_CONTEXT.md  DEPLOYMENT.md  NEXT_TASK.md  README.md  docker-compose.yml  staging.nginx.example.conf
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_0001_initial_foundation.py  20260310_0002_meal_entry_snapshots.py  20260312_0003_auth_security_basics.py  20260518_0004_food_barcode.py  20260518_0005_full_macros_targets.py  20260522_0006_foods_trigram_search.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/application/services/: auth_service.py  foods_service.py  goals_service.py  health_service.py  meals_service.py  nutrition_service.py  preferences_service.py  progress_service.py  system_service.py  users_service.py
backend/app/core/: config.py  security.py
backend/app/domain/auth/: __init__.py  schemas.py
backend/app/domain/foods/: __init__.py  models.py  schemas.py
backend/app/domain/goals/: __init__.py  models.py  schemas.py
backend/fitness_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: foods_stats.py  import_off.py  seed_polish_basics.py
backend/tests/: test_account_settings.py  test_auth.py  test_config.py  test_foods.py  test_health.py  test_meal_entries.py  test_meals.py  test_nutrition.py  test_progress.py  test_security.py  test_system.py
backend/tests/scripts/: test_import_off_parser.py
(+172 files in other folders)
